--- a/Calculator_2.0/project/Makefile.win
+++ b/Calculator_2.0/project/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = ../files/Main.o ../files/Print.o ../files/Scan.o
-LINKOBJ  = ../files/Main.o ../files/Print.o ../files/Scan.o
+OBJ      = ../files/Main.o ../files/Print.o ../files/Scan.o ../files/Calculation.o
+LINKOBJ  = ../files/Main.o ../files/Print.o ../files/Scan.o ../files/Calculation.o
 LIBS     = -L"E:/Dev-Cpp/MinGW64/lib" -L"E:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"E:/Dev-Cpp/MinGW64/include" -I"E:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"E:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"E:/Dev-Cpp/MinGW64/include" -I"E:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"E:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"E:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -32,3 +32,6 @@ $(BIN): $(OBJ)
 
 ../files/Scan.o: ../files/Scan.cpp
 	$(CPP) -c ../files/Scan.cpp -o ../files/Scan.o $(CXXFLAGS)
+
+../files/Calculation.o: ../files/Calculation.cpp
+	$(CPP) -c ../files/Calculation.cpp -o ../files/Calculation.o $(CXXFLAGS)
